<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecordActivity">

    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/name"
            android:layout_height="wrap_content"
            style="@style/text_style">
        </TextView>

        <EditText
            android:id="@+id/editName"
            style="@style/edit_style"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:hint="@string/enter_name"
            android:inputType="text" />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/distance"
            android:layout_height="wrap_content"
            style="@style/text_style">
        </TextView>

        <EditText
            android:id="@+id/editDistance"
            style="@style/edit_style"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:hint="@string/enter_distance"
            android:inputType="number" />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/time"
            android:layout_height="wrap_content"
            style="@style/text_style">
        </TextView>

        <EditText
            android:id="@+id/editTime"
            style="@style/edit_style"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:hint="@string/enter_seconds"
            android:inputType="number" />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="Speed"
            android:layout_height="wrap_content"
            style="@style/text_style">
        </TextView>

        <TextView
            android:id="@+id/tvSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="30 km/h"
            android:textColor="@color/design_default_color_error"
            android:textSize="18dp" />
    </LinearLayout>

    <Button
        android:enabled="false"
        android:layout_gravity="center_horizontal"
        android:text="SAVE"
        android:layout_marginTop="16dp"
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>